--- a/index.html
+++ b/index.html
@@ -1,16 +1,81 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>網站目錄</title>
+  <meta charset="UTF-8">
+  <title>Jeff's Website</title>
+  <style>
+    body {
+      background-color: rgb(248, 238, 223);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 700px;
+      margin: 50px auto;
+      background-color: rgb(232, 201, 153);
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      padding: 30px;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 36px;
+      color: rgb(142, 22, 22);
+      font-style: italic;
+      margin-bottom: 10px;
+    }
+
+    hr {
+      border: none;
+      height: 2px;
+      background-color: rgb(142, 22, 22);
+      width: 60%;
+      margin: 20px auto;
+    }
+
+    .link-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .link-box {
+      background-color: rgb(248, 238, 223);
+      padding: 20px;
+      border-radius: 10px;
+      transition: transform 0.2s, background-color 0.3s;
+    }
+
+    .link-box:hover {
+      transform: scale(1.05);
+      background-color: rgb(232, 201, 153);
+    }
+
+    a {
+      text-decoration: none;
+      font-size: 24px;
+      color: rgb(0, 0, 0);
+    }
+
+    a:hover {
+      color: rgb(142, 22, 22);
+    }
+  </style>
 </head>
 <body>
-    <h1>網站目錄</h1>
-    <ul>
-        <li><a href="TESTHTML0412.html">自我簡介</a></li>
-        <li><a href="TESTTALK.html">聊天室</a></li>
-        <li><a href="TESTGAME.html">小遊戲1</a></li>
-        <li><a href="TESTVIDEO.html">看影片</a></li>
-    </ul>
+  <div class="container">
+    <h1>Jeff's Website</h1>
+    <hr />
+    <div class="link-grid">
+      <div class="link-box"><a href="TESTHTML0412.html">About Me</a></div>
+      <div class="link-box"><a href="TESTTALK.html">Chat Room</a></div>
+      <div class="link-box"><a href="TESTGAME.html">Minigames</a></div>
+      <div class="link-box"><a href="TESTVIDEO.html">Videos</a></div>
+    </div>
+  </div>
 </body>
 </html>
