--- a/WeatherDemo.html
+++ b/WeatherDemo.html
@@ -16,7 +16,7 @@
 
 
     <script>
-      const apiUrl = 'hhttps://opendata.cwa.gov.tw/api/v1/rest/datastore/F-C0032-001?Authorization=CWA-88282DC7-CC14-45D6-B786-D68B1C81F577&limit=10&format=JSON&locationName=&elementName=';
+      const apiUrl = 'https://opendata.cwa.gov.tw/api/v1/rest/datastore/F-C0032-001?Authorization=CWA-88282DC7-CC14-45D6-B786-D68B1C81F577&limit=10&format=JSON&locationName=&elementName=';
       const weatherList = document.getElementById('weatherList');
 
 
